Bug 66700 - REPORTBUILDER - CRASH when deleting field added in Report Design mode
Summary: REPORTBUILDER - CRASH when deleting field added in Report Design mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) macOS (All)
: highest blocker
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-07-08 14:39 UTC by Alex Thurgood
Modified: 2013-08-30 20:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
apple crash trace when trying to delete field/label from report (70.74 KB, text/plain)
2013-07-08 15:08 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2013-07-08 14:39:26 UTC
How to reproduce :

1) Open an ODB file, I have been using nba2012.odb for my tests.
2) Click on Reports, then Crete Report in Design View
3) Drag field from list of fields window to the Detail pane.
4) Note that 2 identical fields appear to be added ????
5) Select the object (both fields appear selected) and try to delete it with Backspace (Mac) or delete key
6) Crash

gdb output below :

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_PROTECTION_FAILURE at address: 0x00000050
0x0052245f in SfxApplication::MiscState_Impl ()
(gdb) 
(gdb) backtrace full
#0  0x0052245f in SfxApplication::MiscState_Impl ()
No symbol table info available.
#1  0x005bd2eb in SfxShell::GetSlotState ()
No symbol table info available.
#2  0x00845d5f in SfxDispatcher::QueryState ()
No symbol table info available.
#3  0x005e6f10 in SfxDispatchController_Impl::addStatusListener ()
No symbol table info available.
#4  0x005e765e in SfxOfficeDispatch::addStatusListener ()
No symbol table info available.
#5  0x0b26cffd in framework::MenuBarManager::Activate ()
No symbol table info available.
#6  0x01a856b7 in Menu::Activate ()
No symbol table info available.
#7  0x01a82d77 in MenuBar::HandleMenuActivateEvent ()
No symbol table info available.
#8  0x01af9669 in ImplWindowFrameProc ()
No symbol table info available.
#9  0x01b52ff5 in -[SalNSMenu menuNeedsUpdate:] ()
No symbol table info available.
#10 0x96c0eb2f in -[NSMenu _populateFromDelegateWithEventRef:] ()
No symbol table info available.
#11 0x96bb0b66 in -[NSMenu _populateWithEventRef:] ()
No symbol table info available.
#12 0x96c0db6d in -[NSCarbonMenuImpl _carbonPopulateEvent:handlerCallRef:] ()
No symbol table info available.
#13 0x96c0d6ee in NSSLMMenuEventHandler ()
No symbol table info available.
#14 0x937099bb in _InvokeEventHandlerUPP ()
No symbol table info available.
#15 0x93591394 in DispatchEventToHandlers ()
No symbol table info available.
#16 0x93590780 in SendEventToEventTargetInternal ()
No symbol table info available.
#17 0x935905ca in SendEventToEventTargetWithOptions ()
No symbol table info available.
#18 0x9374b204 in SendMenuPopulate ()
No symbol table info available.
#19 0x937670a9 in PopulateMenu ()
No symbol table info available.
#20 0x935d7a89 in Check1MenuForKeyEvent ()
No symbol table info available.
#21 0x935d83d9 in Check1MenuForKeyEvent ()
No symbol table info available.
#22 0x935d73fd in CheckMenusForKeyEvent ()
No symbol table info available.
#23 0x93766f9d in _IsMenuKeyEvent ()
No symbol table info available.
#24 0x935d6f8f in IsMenuKeyEvent ()
No symbol table info available.
#25 0x96c0d437 in -[NSCarbonMenuImpl _menuItemWithKeyEquivalentMatchingEventRef:] ()
No symbol table info available.
#26 0x96c0d1b1 in _NSFindMenuItemMatchingCommandKeyEvent ()
No symbol table info available.
#27 0x96ac6434 in _NSHandleCarbonMenuEvent ()
No symbol table info available.
#28 0x969ecfdf in _DPSNextEvent ()
No symbol table info available.
#29 0x969ec16c in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] ()
No symbol table info available.
#30 0x01b06ea4 in AquaSalInstance::Yield ()
No symbol table info available.
#31 0x017b7b34 in Application::Yield ()
No symbol table info available.
#32 0x017b8eec in Application::Execute ()
No symbol table info available.
#33 0x0006dffc in desktop::Desktop::Main ()
No symbol table info available.
#34 0x017c0302 in ImplSVMain ()
No symbol table info available.
#35 0x01b05f31 in AquaSalInstance::handleAppDefinedEvent ()
No symbol table info available.
#36 0x01b42b6b in -[VCL_NSApplication sendEvent:] ()
No symbol table info available.
#37 0x969e262c in -[NSApplication run] ()
No symbol table info available.
#38 0x969855f6 in NSApplicationMain ()
No symbol table info available.
#39 0x01b067f7 in ImplSVMainHook ()
No symbol table info available.
#40 0x017c033a in SVMain ()
No symbol table info available.
#41 0x0009c0b5 in soffice_main ()
No symbol table info available.
#42 0x00001f4e in main ()
No symbol table info available.
(gdb) c
Continuing.

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_PROTECTION_FAILURE at address: 0x00000050
0x0052245f in SfxApplication::MiscState_Impl ()
(gdb)
Comment 1 Alex Thurgood 2013-07-08 14:40:21 UTC
Adding Lionel, Julien to CC
Comment 2 Alex Thurgood 2013-07-08 14:41:47 UTC
It is already pretty weird that two identical fields get added via DnD - that in itself is a bug.


Alex
Comment 3 Alex Thurgood 2013-07-08 14:58:11 UTC
OK, forget the double fields comment, there are not two fields being added, but the Label gets positioned under the Field itself and bears of course the same name. The positioning of the Label is such that it overlaps with the Footer zone of the report. This is still a separate bug IMHO.


Alex
Comment 4 Alex Thurgood 2013-07-08 15:08:37 UTC
Created attachment 82193 [details]
apple crash trace when trying to delete field/label from report
Comment 5 Alex Thurgood 2013-07-08 15:09:21 UTC
This could well be a DUP of fdo#61380
Comment 6 Lionel Elie Mamane 2013-07-09 02:40:11 UTC
Alex, you tagged this as regression, but I don't see in any comment in which version it was working. Please specify that (if necessary, after testing with older/stable versions), or remove the regression keyword.
Comment 7 Robert Großkopf 2013-07-09 19:19:57 UTC
All this works in LO 3.6.6.2, LO 4.0.3.3 and LO 4.1.0.2 under Linux 64bit rpm. You could delete both fields. Alex, you could be happy, when you could create a report in LO 4.2.0.0 beta - I can't. LO will hang when I want to start to create a report.
Comment 8 Alex Thurgood 2013-07-10 18:58:00 UTC
And of course, I don't see the problem on my 32bit Linux build from master, sigh.

Will report on or rectify  OSX regression status later.


Alex
Comment 9 Alex Thurgood 2013-07-11 09:04:27 UTC
Confirming regression over 3.5.7 and 3.6.6 on OSX



Alex
Comment 10 Alex Thurgood 2013-07-11 09:07:27 UTC
Further comments :

In versions 3.5.7 and 3.6.6, the Backspace key, used to delete selected objects on OSX did not work (accelerator binding issues). However, Cmd-X did work and successfully deletes any selected object.

If I try Cmd-X on the selected objects in my OSX master build, the crash is immediate, whereas if I use the the Backspace key, it takes a few microseconds more for the main app window to disappear.

I am wondering whether the recent accelerator key work on OSX is the underlying issue here ?


Alex
Comment 11 Alex Thurgood 2013-07-11 09:10:30 UTC
On LO 4.0.3.3, Cmd-X also works without crashing LO, whereas the Backspace key has no effect.


Alex
Comment 12 Alex Thurgood 2013-07-11 09:16:53 UTC
(In reply to comment #7)

> create a report in LO 4.2.0.0 beta - I can't. LO will hang when I want to
> start to create a report.


Hi Robert,

On my 32bit Linux master build, I can create a Report in Design View but the windows are slow to appear, it takes my 4Gb RAM Ubuntu 13.04 system a good ten seconds for the Report Design window and Field Selector to appear, and certainly Unity seems to think that the app has hung for a while, as it darkens the screen. I put that down to it being a developer build on my machine, and not fully integrated with Unity, but maybe what you are seeing on your own system is that it is indeed slow to appear to the point where the app appears to have hung.

If that is the case, and I say 'if', then that sounds like a separate performance bug.

Alex
Comment 13 Thomas van der Meulen [retired] 2013-08-01 19:23:40 UTC
Hello all, 

I can reproduce this bug running LibreOffice Version: 4.2.0.0.alpha0+
Build ID: 02fb63f8f29085213659b730456dbf0438c2f7cc
TinderBox: MacOSX-X86_64@43, Branch:master, Time: 2013-08-01_00:42:37
 on Mac osx 10.8.4. 
I used the nba2012.odb file from bug 56325 

I am not good with Base (first time I used it) so I hope I did every thing good
Comment 14 Julien Nabet 2013-08-03 14:39:01 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
I noticed that if I drag a field from the list, there's just 1 field which appear to be added.
Java info:
java version "1.7.0_21"
OpenJDK Runtime Environment (IcedTea 2.3.9) (7u21-2.3.9-5)
OpenJDK 64-Bit Server VM (build 23.7-b01, mixed mode)

Thomas: in the recent build you use, did you have too 2 identical fields added?
Comment 15 Alex Thurgood 2013-08-03 15:08:14 UTC
(In reply to comment #14)

Hi Julien,

> Thomas: in the recent build you use, did you have too 2 identical fields
> added?

Looks like this is another Mac-only bug...


Alex
Comment 16 Julien Nabet 2013-08-03 15:10:14 UTC
Alex: badfully :-( With a more recent build, do you still have the "duplicate drag"?
Comment 17 Alex Thurgood 2013-08-03 15:23:29 UTC
(In reply to comment #16)
> Alex: badfully :-( With a more recent build, do you still have the
> "duplicate drag"?

Haven't been able to build from master on Mac for a while, thanks to an automatic Apple XCode upgrade hosing my command line tool installation and forcing me to switch to 10.8 SDK. 

For now, I will have to try with one of Tor's 64bit builds or a daily build from the buildbots.


Alex
Comment 18 Thomas van der Meulen [retired] 2013-08-03 17:51:53 UTC
Julien: Yes there were too fields edited at the same time just like Alex said at step 4. I thing that that is also a bug.?.?..
Comment 19 Caolán McNamara 2013-08-30 14:09:36 UTC
I can reproduce this now on mac
Comment 20 Commit Notification 2013-08-30 15:19:52 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd0f6c737b6af659389e473296e939ec6cfa5f4e

Resolves: fdo#66700 don't crash on querying zoom state with no SfxObjectShell



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2013-08-30 20:15:42 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47134ddc12e130ff65848cb8faa72fa3a4a61c77&h=libreoffice-4-1

Related: fdo#66700 don't crash on setting zoom state with no SfxObjectShell


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.