Related: fdo#66700 don't crash on setting zoom state with no SfxObjectShell

(cherry picked from commit dd0f6c737b6af659389e473296e939ec6cfa5f4e)

Conflicts:
	sfx2/source/appl/appserv.cxx

Change-Id: Id2943c92ce6deaae3e4d507a35c08466db21cece